rename core scss folder to prevent redundant globbing + remove padding on small screens

--- a/public/modules/_core/assets/core.scss
+++ b/public/modules/_core/assets/core.scss
@@ -3,10 +3,10 @@
 /*	It is therefore not recommended to use it when load order is important.
 */
 	
-	@import './scss/_fonts';
-	@import './scss/_theme';
-	@import './scss/_navbar-theme';
-	@import './scss/_layout';
+	@import './corescss/_fonts';
+	@import './corescss/_theme';
+	@import './corescss/_navbar-theme';
+	@import './corescss/_layout';
 	
 	$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 	@import '~bootstrap-sass/assets/stylesheets/_bootstrap';
@@ -15,14 +15,21 @@
 	@import '~font-awesome/scss/font-awesome';
 	
 	/* globbing all remaining scss files */
-	@import "../../**/scss/*";
+	@import "../..//**/scss/*";
 	
-	/* media dependent css (needs bs to be loaded first) */
+	/* media dependent css (needs bootstrap to be loaded first) */
+	@media (max-width: $screen-xs-max) {
+		.pw-content.container {
+			padding-left: 0;
+			padding-right: 0;
+		}
+	}
+	/*
 	@media (max-width: $screen-xs-max) {
 		.main > .content-wrapper.margin-small {	margin-left: 0 !important; }
 		.margin-large {	margin-left: 0 !important; }
 	}
-	
+	*/
 	/*remove padding on smaller displays
 	@media (max-width: $screen-md-max) {
 		.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
