--- a/public/modules/projects/directives/pw-smart-keyboard/assets/scss/custom.scss
+++ b/public/modules/projects/directives/pw-smart-keyboard/assets/scss/custom.scss
@@ -52,19 +52,23 @@ pw-smart-keyboard {
 		min-height: 2em;
 	}
 	
-	@media (max-width: 767px) {
+	@media (max-width: $screen-xs-max) {
 
 		.tags .btn, .reactiveTextarea {
 			font-size: 1.1em;
 			line-height: 1.1em;
 			min-height: 2em;
 		}
-
+		
+		.col-sm-12 {
+			padding-left: 0 !important;
+			padding-right: 0 !important;
+		}
 	}
 
 	.form-group {
 		margin-bottom: 0;
-		border-radius: 0!important;
+		border-radius: 0 !important;
 		box-shadow: none;
 		border-color: #d2d6de;
 	}
